force-app/main/default/objects/Transaction_History__c/Transaction_History__c.object-meta.xml
<CustomObject>
    <description>This object will store all the transactions details done by the customer</description>
    <label>Transaction History</label>
    <nameField>
        <label>Transaction History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transaction History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>