force-app/main/default/objects/Transaction_History__c/fields/Booking_Id__c.field-meta.xml
<CustomField>
    <fullName>Booking_Id__c</fullName>
    <label>Booking Id</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Transaction History</relationshipLabel>
    <relationshipName>Transaction_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>