force-app/main/default/objects/Transaction_History__c/fields/Discount_Applied__c.field-meta.xml
<CustomField>
    <fullName>Discount_Applied__c</fullName>
    <label>Discount Applied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>