force-app/main/default/objects/Transaction_History__c/fields/Refund_Charges__c.field-meta.xml
<CustomField>
    <fullName>Refund_Charges__c</fullName>
    <label>Refund Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>